# RetroForth 2021.2 Release Notes

## Core Language

## I/O

- simplify definition of `c:get`

## Toolchain

- retro-extend.py now does run length encoding

## VM

- nga-python

  - added support for run length encoded images
  - added a decimal device (alt. to floating point w/higher precision)
  - better fix for nested file inclusion handling
  - start adding pythonista ui support (iOS)
  - now runs under Python 2

- nga-c

  - better fix for nested file inclusion handling
  - removed unused variables
  - use a struct for processor state, stacks

- nga-816

  - assembly implementation for 65c816
  - by Piotr Meyer

## Examples

- reduced some line lengths
- refactored retro-locate
- file names now using a consistent case/format
- added a line oriented text editor

## Documentation

- epub now has a cover image