@@ -101,6 +101,13 @@ E.g.:
 <br/><br/>
 <tt class='indentedcode'>make&nbsp;LDFLAGS=-lnetwork</tt>
 <br/><br/>
+<span class="h3">Unix</span>
+<br/><br/>
+On Unix, you can optionally enable the sockets device (and thus the socket
+words) by building with <span class="tt">-DENABLE_SOCKETS</span>.
+<br/><br/>
+<tt class='indentedcode'>make&nbsp;OPTIONS="-DENABLE_SOCKETS"</tt>
+<br/><br/>
 <span class="h2">Issues</span>
 <br/><br/>
 If you run into any build issues, please send details to
