@@ -45,13 +45,13 @@
 </head><body>
 <p><span class="h1">Deprecation Policy</span>
 <br/><br/>
-As RETRO evolves, some words will become obsolete and no longer
-be needed. In each release, these will be marked as deprecated
-in the glossary. Any deprecated words will be removed in the
-next quarterly release.
+As RETRO evolves, some words will become obsolete and no longer be
+needed. In each release, these will be marked as deprecated in the
+glossary. Any deprecated words will be removed in the next quarterly
+release.
 <br/><br/>
-E.g., if 2020.1 had deprecated words, these would be removed in
-the 2020.4 release. Any words made deprecated in between 2020.1
-and 2020.4 would be removed in the 2020.7 release.
+E.g., if 2020.1 had deprecated words, these would be removed in the
+2020.4 release. Any words made deprecated in between 2020.1 and
+2020.4 would be removed in the 2020.7 release.
 </p>
 </body></html>
